<resources>
    <string name="app_name">Richmond</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Text2">Richmond Beteise</string>
    <string name="videos1">videos</string>
    <string name="search1">Search</string>
    <string name="themes1">Themes</string>
    <string name="call2">Call</string>
    <string name="messsage">Messsage</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="richmond_believes_in_god">Richmond Believes in GOD</string>
    <string name="todo">TODO</string>
</resources>