<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="101"
        android:title="@string/search1"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:orderInCategory="101"
        android:title="@string/themes1" />
    <item
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="102"
        android:title="@string/call2"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@android:drawable/ic_dialog_alert"
        android:orderInCategory="103"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="104"
        android:title="@string/messsage"
        app:showAsAction="ifRoom" />
</menu>